Add Regions API
